# cr42ynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  librtosc.pc  theme.conf
CR42Ynth/: CMakeLists.txt  README.md
CR42Ynth/media/: logo.odg
CR42Ynth/src/: CMakeLists.txt
CR42Ynth/src/avtk/avtk/pugl/: common.h  pugl_win.cpp
CR42Ynth/src/dsp/: CR42Ynth.cpp  CR42YnthURIS.h  Control.cpp  Control.h  Controller.cpp  Voice.h  lv2_dsp.cpp
CR42Ynth/src/dsp/generators/: WTOscillator.h
CR42Ynth/src/dsp/modifiers/: Envelope.h  ExternalPort.cpp  ExternalPort.h  LFO.cpp  LFO.h
CR42Ynth/src/dsp/playheads/: ENVPlayhead.cpp  ENVPlayhead.h  LFOPlayhead.h  OscPlayhead.cpp
CR42Ynth/src/ui/: CMakeLists.txt  CR42YnthUI.cpp  lv2_ui.cpp
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
Debug/src/avtk/avtk/: subdir.mk
Debug/src/avtk/libs/: pffft.d  subdir.mk
Debug/src/dsp/: DoubleControl.d  subdir.mk
avtk/avtk/: avtk.hxx
cr42ynth.lv2/: cr42ynth.ttl  manifest.ttl
media/: logo.xcf  logo_proto.xcf
rtosc/html/: index.html
rtosc/latex/: refman.tex
src/: CMakeLists.txt  DefinitionHandler.cpp  DefinitionHandler.h  common.h
src/avtk/: README.md
src/avtk/avtk/: avtk.hxx  box.cxx  box.hxx  button.cxx  button.hxx  common.cxx  common.hxx  dial.cxx  dial.hxx  dialog.cxx  dialog.hxx  envelope.cxx  envelope.hxx  eventeditor.cxx  eventeditor.hxx  filebrowser.cxx  filebrowser.hxx  group.cxx  group.hxx  helpers.cxx  helpers.hxx  image.cxx  image.hxx  list.cxx  list.hxx  listitem.cxx  listitem.hxx  midi.cxx  midi.hxx  number.cxx  number.hxx  picojson.hxx  rotary.cxx  rotary.hxx  scroll.cxx  scroll.hxx  slider.cxx  slider.hxx  spectrum.cxx  spectrum.hxx  (+16 more)
src/avtk/avtk/pugl/: gl.h  (+7 more)
src/avtk/libs/: audioGen.hxx  pffft.cxx  pffft.hxx  plotter.hxx
src/common/: AutomationData.cpp  AutomationData.h  BoolControl.cpp  BoolControl.h  CR42YConfig.cpp  CR42YConfig.h  CR42YnthCommunicator.cpp  CR42YnthCommunicator.h  Control.cpp  Control.h  ControlListener.cpp  ControlListener.h  DefinitionHandler.cpp  DefinitionHandler.h  DoubleControl.cpp  DoubleControl.h  FftRealPair.cpp  IntControl.cpp  IntControl.h  LFOEditData.cpp  LFOEditData.h  ModulationControls.cpp  ModulationControls.h  OSCEvent.cpp  OSCEvent.h  OSCEventListener.cpp  OSCEventListener.h  OscillatorControls.cpp  OscillatorControls.h  WPFunction.cpp  WPFunction.h  WPHarmonics.cpp  WPHarmonics.h  WPSamples.cpp  WPSamples.h  WaveformPart.cpp  WaveformPart.h  WavetableEditData.cpp  WavetableEditData.h  common.cpp  (+1 more)
src/common/PortCommunication/: MessageReceiver.cpp  MessageReceiver.h  PortCommunicator.cpp  PortCommunicator.h
src/common/lv2/: CR42YnthLV2Communicator.cpp  CR42YnthLV2Communicator.h  CR42YnthLV2URIS.cpp  CR42YnthLV2URIS.h  CommunicatorMessage.cpp  CommunicatorMessage.h  lv2_common.h
src/dsp/: Automation.cpp  Automation.h  AutomationHandler.cpp  AutomationHandler.h  CMakeLists.txt  CR42Ynth.cpp  CR42Ynth.h  CR42YnthDSP.cpp  CR42YnthDSP.h  CR42YnthURIS.cpp  Control.cpp  Control.h  Controller.h  DSPPortCommunicator.cpp  DSPPortCommunicator.h  DoubleControl.cpp  DoubleControl.h  LFO.cpp  LFO.h  LFOHandler.cpp  LFOHandler.h  ModulatableControl.cpp  ModulatableControl.h  ModulatableDoubleControl.cpp  ModulatableDoubleControl.h  ModulatableIntControl.cpp  ModulatableIntControl.h  ModulationHandler.cpp  ModulationHandler.h  Property.cpp  Property.h  Voice.cpp  Voice.h  WTOscillator.cpp  WTOscillator.h  lv2_dsp.cpp
src/dsp/Controllers/: Controller.cpp  Controller.h  EnvelopeController.cpp  EnvelopeController.h  ExternalPort.cpp  ExternalPort.h  LFOController.cpp  LFOController.h  OscillatorController.cpp  OscillatorController.h
src/dsp/Generators/: Envelope.cpp  Envelope.h  Generator.cpp  Generator.h  LFO.cpp  LFO.h  OscillatorVoiceData.cpp  OscillatorVoiceData.h  WTOscillator.cpp  WTOscillator.h
src/dsp/PortCommunication/: DoubleMessageReceiver.cpp  DoubleMessageReceiver.h  MessageReceiver.cpp  MessageReceiver.h  PortCommunicator.cpp  PortCommunicator.h  PortMessageReceiver.h
src/dsp/generators/: Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  WTOscillator.cpp  WTOscillator.h
src/dsp/lv2/: CR42YnthLV2.cpp  CR42YnthLV2.h  lv2DSP.cpp
src/dsp/modifiers/: Envelope.cpp
src/dsp/playheads/: LFOPlayhead.cpp  OscPlayhead.h
src/dsp/voice/: ENVVoice.cpp  ENVVoice.h  LFOVoice.cpp  LFOVoice.h  OscVoice.cpp  OscVoice.h  Voice.cpp  Voice.h
src/ui/: AutomationEditController.cpp  AutomationEditController.h  CMakeLists.txt  CR42YAutomationDial.cpp  CR42YAutomationDial.h  CR42YAutomationEditor.cpp  CR42YAutomationEditor.h  CR42YAutomationItem.cpp  CR42YAutomationItem.h  CR42YAutomationOverview.cpp  CR42YAutomationOverview.h  CR42YAutomationSampleEditor.cpp  CR42YAutomationSampleEditor.h  CR42YAutomationSelector.cpp  CR42YAutomationSelector.h  CR42YAutomationSettings.cpp  CR42YAutomationSettings.h  CR42YBoxVScale.cpp  CR42YBoxVScale.h  CR42YButton.cpp  CR42YButton.h  CR42YControlDial.cpp  CR42YControlDial.h  CR42YControlIntegerEditor.cpp  CR42YControlIntegerEditor.h  CR42YControlToggle.cpp  CR42YControlToggle.h  CR42YControlToggleSelector.cpp  CR42YControlToggleSelector.h  CR42YDetuneEditor.cpp  CR42YDetuneEditor.h  CR42YDial.cpp  CR42YDial.h  CR42YEntry.cpp  CR42YEntry.h  CR42YGrid.cpp  CR42YGrid.h  CR42YHScrollbar.cpp  CR42YHScrollbar.h  CR42YHarmonicsEditor.cpp  (+70 more)
src/ui/lv2/: CR42YnthUILV2.cpp  CR42YnthUILV2.h  lv2UI.cpp
src/ui/tools/: FreeTool.cpp  FreeTool.h  SinHalfTool.cpp  SinHalfTool.h  SinSlopeTool.cpp  SinSlopeTool.h  TriTool.cpp  TriTool.h  WTTool.cpp  WTTool.h
src/ui/wtEditor/: CMakeLists.txt  CRSurfaceButton.cpp  CRSurfaceButton.h  CustomScroll.cpp  CustomScroll.h  DragBar.cpp  DragBar.h  HarmonicsEditor.cpp  HarmonicsEditor.h  HarmonicsView.cpp  HarmonicsView.h  TestUI.cpp  TestUI.h  ToolPanel.cpp  ToolPanel.h  WTEditor.cpp  WTEditor.h  WTView.cpp  WTView.h  WaveformView.cpp  WaveformView.h  WavetableEditController.cpp  WavetableEditController.h  test.cpp
src/ui/wtEditor/tools/: FreeTool.cpp  FreeTool.h  SinHalfTool.cpp  SinHalfTool.h  SinSlopeTool.cpp  SinSlopeTool.h  TriTool.cpp  TriTool.h  WTTool.cpp  WTTool.h
(+10 files in other folders)
